# card-display

./: .gitignore  pyproject.toml
card-display/: deck.py
card-display/games/: __init__.py  deck51.txt  hearts3.txt
card_display/: __main__.py  deck.py  utils.py
card_display/games/: __init__.py  bridge1.txt  deck1.txt
tests/: test_deck.py
